# colander

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml
crates/colander-cache/: Cargo.toml
crates/colander-cache/benches/: cache_bench.rs
crates/colander-cache/src/: arena.rs  fifo.rs  lib.rs  lru.rs  sharded.rs  sieve.rs  traits.rs
crates/demo-backend/: Cargo.toml
crates/demo-backend/src/: main.rs
crates/loadgen/: Cargo.toml
crates/loadgen/src/: main.rs  zipfian.rs
crates/proxy-server/: Cargo.toml
crates/proxy-server/src/: cache_layer.rs  config.rs  main.rs  metrics.rs  proxy.rs
crates/proxy-server/src/resp/: cmd.rs  connection.rs  mod.rs
dashboard/: nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css  types.ts
dashboard/src/components/: AlphaSlider.tsx  ConnectionStatus.tsx  HitRateChart.tsx  ModeToggle.tsx  StatsCards.tsx  ThroughputChart.tsx
dashboard/src/hooks/: useMetrics.ts
docker/: Dockerfile.dashboard  Dockerfile.rust  config.toml
