[workspace]
resolver = "2"
members = [
    "crates/colander-cache",
    "crates/proxy-server",
    "crates/loadgen",
    "crates/demo-backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kclaka/colander"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
bytes = "1"
