[package]
name = "colander-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance cache eviction algorithms (SIEVE, LRU, FIFO) with arena allocation and sharding"

[dependencies]
parking_lot = "0.12"
bytes = { workspace = true }
ahash = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "cache_bench"
harness = false
